Keep head size whole number in UI

--- a/App/app/src/main/res/layout/add_edit_racquet.xml
+++ b/App/app/src/main/res/layout/add_edit_racquet.xml
@@ -67,7 +67,7 @@
                 android:layout_height="48dp"
                 android:layout_marginBottom="16dp"
                 android:autofillHints="headSize"
-                android:inputType="number|numberDecimal"
+                android:inputType="number"
                 android:maxWidth="200dp"
                 android:text="@string/racquet_head_size_100" />
 
